# camunda-external-task-client-python3

./: .gitignore  Dockerfile  README.md  docker-compose-auth.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yml
bpmn_process/: bpmn_error_example.bpmn  correlate_message_example.bpmn  event_subprocess_example.bpmn  parallel_steps_example.bpmn
camunda/client/: async_external_task_client.py  engine_client.py  external_task_client.py
camunda/client/tests/: test_async_external_task_client.py  test_async_external_task_client_auth.py  test_async_external_task_client_bearer.py  test_engine_client.py  test_engine_client_auth.py  test_engine_client_bearer.py  test_external_task_client.py  test_external_task_client_auth.py  test_external_task_client_bearer.py
camunda/client/transport/: requests.py  serializers.py
camunda/client/transport/tests/: test_request_transport.py
camunda/external_task/: async_external_task_executor.py  async_external_task_worker.py  external_task.py  external_task_executor.py  external_task_worker.py
camunda/external_task/tests/: test_async_external_task_executor.py  test_async_external_task_worker.py  test_external_task.py  test_external_task_executor.py  test_external_task_worker.py  test_helper.py
camunda/process_definition/: process_definition_client.py
camunda/process_definition/tests/: test_process_definition_client.py
camunda/utils/: auth_basic.py  auth_bearer.py  log_utils.py  response_utils.py  utils.py
camunda/utils/tests/: test_auth_basic.py  test_auth_bearer.py  test_response_utils.py  test_utils.py
camunda/variables/: properties.py  variables.py
camunda/variables/tests/: test_properties.py  test_variables.py
engine-rest/: web.xml
examples/: asyncio_example.py  bpmn_error_example.py  correlate_message.py  event_subprocess_example.py  fetch_and_execute.py  get_process_instance.py  retry_task_example.py  start_process.py  task_handler_example.py  tasks_example.py
examples/examples_auth_basic/: fetch_and_execute.py  get_process_instance.py  start_process.py
postman_collection/: Camunda Local Dev Environment.postman_environment.json  Camunda REST APIs.postman_collection.json
