[metadata]
name = camunda_external_task_client_python3_asyncio
version = 4.4.0
description = Camunda External Task Client for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dstny-gis/camunda-external-task-client-python3-asyncio
author = Deserve Labs
author_email = devteam@deserve.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    aiohttp>=3.9.3
    asyncio>=3.4.3
python_requires = >=3.10
include_package_data = True

[options.packages.find]
exclude = tests
