[metadata]
name = camunda_external_task_client_python3
version = 4.5.0
description = Camunda External Task Client for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yogeshrnaik/camunda-external-task-client-python3
author = Deserve Labs
author_email = devteam@deserve.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    requests>=2.24.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude = tests
